Update src/main/java/io/kestra/plugin/stripe/balance/Retrieve.java
Co-authored-by: François Delbrayelle <fdelbrayelle@gmail.com>